# uras-permutations

./: .gitignore  Cargo.toml  README.md
bash_tests/: run.sh
benchmarking/: benchmarks.csv  benchmarks_babbage.csv  benchmarks_cooperman_ma_cache_size.csv  benchmarks_kovacs.csv  benchmarks_kovacs_saturated.csv  benchmarks_mandel_realtime.csv  benchmarks_rust_cooperman_ma_cache_sizes_n=1073741824.csv  run.sh  run_quick.sh  run_saturated.sh
c/: a.out  composition.h  composition_c_cooperman_ma  composition_c_naive  composition_c_naive_optimized  composition_c_unrolled_16  composition_c_unrolled_2  composition_c_unrolled_32  composition_c_unrolled_4  composition_c_unrolled_8  composition_cooperman_ma.c  composition_cooperman_ma.s  composition_naive.c  composition_naive.s  composition_naive_optimized.c  composition_naive_optimized.s  composition_naive_unrolled.c  composition_naive_unrolled.s  composition_naive_unrolled_4.s  main.c  makefile
c_src/: composition_cooperman_ma.c  composition_naive.c  main.c  makefile  permutation_composition.h
executable_scripts/: composition c naive.sh  composition c naive_optimized.sh  composition c unrolled rolls=16.sh  composition c unrolled rolls=2.sh  composition c unrolled rolls=32.sh  (+46 more)
rust/: Cargo.toml
rust/assembly/: composition_cooperman_ma.s  composition_naive.s  makefile
rust/src/: composition.rs  composition_cooperman_ma.rs  composition_multithread.rs  composition_multithread_cooperman_ma.rs  composition_multithread_naive.rs  composition_naive.rs  generate_permutations.rs  main.rs  permutation_binary_to_plaintext.rs
(+46 files in other folders)
