[package]
name = "uras-permutations"
version = "0.1.0"
authors = ["RyanGibb <ryangibb321@gmail.com>"]
edition = "2018"
default-run = "composition_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
text_io = "0.1.8"
libc = "0.2"
rand = "0.7.3"
crossbeam = "0.7.3"

[[bin]]
name = "composition_rust"
path = "./src/main.rs"

[[bin]]
name = "generate_permutations"
path = "./src/generate_permutations.rs"
